cabal-version: 3.0
name: mdrn
version: 0.1.0.0

homepage: https://github.com/realfolk/haskell-mdrn
license: LGPL-3.0-only
license-file: LICENSE

author: Dhruv Dang
maintainer: dhruv@realfolk.com

category: Development

build-type: Simple

library
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: lib

    exposed-modules:
        MDRN.Data
        MDRN.Data.Decode
        MDRN.Data.Decode.List
        MDRN.Data.Encode
        MDRN.Data.Parser
        MDRN.Domain
        MDRN.Language.Evaluator
        MDRN.Language.Expr
        MDRN.Language.Map
        MDRN.Language.Scope
        MDRN.Lib.ByteString
        MDRN.Lib.Text
        MDRN.Lib.Version
        MDRN.Metadata
        MDRN.Module.Base
        MDRN.Module.ByteString
        MDRN.Module.Either
        MDRN.Module.File
        MDRN.Module.File.ByteString
        MDRN.Module.File.Text
        MDRN.Module.Import
        MDRN.Module.List
        MDRN.Module.Map
        MDRN.Module.Maybe
        MDRN.Module.Mustache
        MDRN.Module.Text
        MDRN.Network.Client.Error
        MDRN.Network.Client.HTTP
        MDRN.Network.Client.Request
        MDRN.Network.Client.Response
        MDRN.Network.Mime
        MDRN.Network.Server.Error
        MDRN.Network.Server.Handler
        MDRN.Network.Server.HTTP
        MDRN.Network.Server.HTTP.Cache
        MDRN.Network.Server.HTTP.Common
        MDRN.Network.Server.HTTP.Request
        MDRN.Network.Server.HTTP.Request.Parser
        MDRN.Network.Server.HTTP.Response
        MDRN.Network.Server.HTTP.Route
        MDRN.Network.Server.Module.Debug
        MDRN.Network.Server.Module.Debug.Error
        MDRN.Network.Server.Module.Remote
        MDRN.Prim

    other-modules:
        MDRN.Data.Decode.Internal

    build-depends:
        aeson,
        base ^>=4.16.4.0,
        binary,
        bytestring,
        connection,
        containers,
        directory,
        http-client,
        http-client-tls,
        http-types,
        microstache,
        mtl,
        network-uri,
        parsec,
        pouch,
        real-folk-logger,
        text,
        time-manager,
        wai,
        warp,
        warp-tls

executable mdrn-benchmarks
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: exe/benchmarks
    main-is: Main.hs

    build-depends:
        base ^>=4.16.4.0,
        criterion,
        mdrn

executable mdrn-repl
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: exe/repl
    main-is: Main.hs

    other-modules:
        MDRN.REPL.Builder
        MDRN.REPL.Lib
        MDRN.REPL.Module
        MDRN.REPL.Options

    build-depends:
        base ^>=4.16.4.0,
        haskeline,
        mdrn,
        mtl,
        optparse-applicative,
        pouch,
        text

test-suite mdrn-test
    ghc-options: -Wall

    type: exitcode-stdio-1.0

    default-language: GHC2021
    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        Test.MDRN.Data.Decode.ListSpec
        Test.MDRN.Lib.ByteStringSpec
        Test.MDRN.Lib.TextSpec
        Test.MDRN.Network.MimeSpec
        Test.MDRN.ParserSpec

    build-depends:
        base ^>=4.16.4.0,
        bytestring,
        hspec,
        mdrn,
        pouch,
        text
